crates/analyzer/tests/snapshots/errors__call_call_on_external_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `__call__()` is not directly callable
   ┌─ compile_errors/call_call_on_external_contract.fe:10:13
   │
10 │         foo.__call__()
   │             ^^^^^^^^
   │
   = Note: `__call__` is not part of the contract's interface, and can't be called.


